styled About section, fixed background for Portal section, used H2 instead of H4, working on spacing

--- a/style.css
+++ b/style.css
@@ -11,11 +11,14 @@ body {
 
 /*  CLASS FOR TITILLIUM FONT WITH BLUE COLOR */
 
-.secondFont {
-    font-size: 1.25rem;
+
+/*for sub-headings under each page section*/
+.leadInHeading {
     font-family: 'Titillium Web', sans-serif;
     color: #001365;
     font-weight: bold;
+    margin-top: 20px;
+    font-size: 1.5rem;
 }
 
 /*  CLASS FOR INVERTED HEADER */
@@ -84,11 +87,13 @@ div#splash.row{
     z-index: -1;
 }
 
+/* .leadInHeading also the subheading under the mRes Portal image*/
 .leadInHeading {
     font-family: 'Titillium Web', sans-serif;
     color: #001365;
     font-weight: bold;
-    margin-top: 30px;
+    margin-top: 20px;
+    font-size: 1.5rem;
 }
 /* White mResilience Logo that overlays on the people picture under the mobile app image in 02. Main section*/
 /*div img#whiteLogo {
@@ -100,13 +105,20 @@ div#splash.row{
 
 #why {
     background:#efefef;
-    padding: 0 15px;
+    padding: 0 4rem;
     margin: 0 auto;
 }
 
 
 .whyStatements {
     padding: 10px 10px 10px 15px;
+}
+
+.secondFont {
+    font-size: 1.25rem;
+    font-family: 'Titillium Web', sans-serif;
+    color: #001365;
+    font-weight: bold;
 }
 
 .checkBullets { 
@@ -123,44 +135,36 @@ div#splash.row{
 
 /* 04 Portal Section*/
 
-#portal-div {
+#portallogo {
+    height: 12%;
+    margin-top: 10px;
+
+}
+
+#portal-section {
     color:#3e3e3e;
     background:white;
     width:100%;
-    padding-top: 2%;
-    padding-left: 5%;
-    padding-right: 5%;
-    padding-bottom:5%;
-}
-
-#portallogo {
-    height: 12%;
-    margin-top: 2%;
-
+    padding: 4rem;
+    margin: 0 0 0 0;
 }
 
 #portalImg {
-    width:100%;
-    height:auto;
+    width:auto;
+    height:100%;
     padding-top: 8%;
-    padding-right:3%;
+    padding-right:15%;
 } 
 
 /* 05 contact form */
 
-#back-form {
+
+#contactFormInfo {
     background:#efefef;
-    padding-top: 2%;
-    padding-bottom: 2%;
-}
-div.container div.row h4.secondFont{
-    padding-top: 0%;
 }
 
-div.container div.row form#back-form.col-lg-6.col-sm-12{
-    padding-top:2%;
-    padding-left: 0%;
-}
+
+
 /* 05 Contact form border & background color by ID */
 
 .input-row {
@@ -207,6 +211,13 @@ div.container div.row form#back-form.col-lg-6.col-sm-12{
 #send:hover{
     background-color: #EFEFEF;
     color:#001365;
+}
+
+/*About*/
+
+#about{
+margin: 4rem;
+
 }
 
 /*Footer*/
